# $Id$

2006-11-01	Konstantin V. Arkhipov

	* core/DB/FakeTransaction.class.php: dummy queryNull's wrapper added.

	* main/Containers/Unified/UnifiedContainer.class.php: do not interrupt
	so-called 'global transaction', if any.

2006-10-31	Dmitry E. Demidov

	* main/Utils/TuringTest/TuringImage.class.php: added ability to
	generate IMG_WBMP.

2006-10-30	Anton E. Lebedevich

	* core/Form/Primitives/: now cleans previous state (if any) on upon
	import.

2006-10-25	Anton E. Lebedevich

	* test/core/LogicTest.class.php: added tests for LogicalExpression.

	* core/Logic/LogicalExpression.class.php,
	core/Logic/Expression.class.php: eqLower fixed for Forms.

2006-10-25	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov

	* 0.8.0 released.

2006-10-19	Konstantin V. Arkhipov

	* meta/types/TimeType.class.php,
	core/Form/Primitives/PrimitiveTime.class.php: Time-primitive
	introduced, Time-type is now supported by meta.

2006-10-18	Konstantin V. Arkhipov

	* core/DB/SQLite.class.php, core/DB/MySQL.class.php: duplicated
	inserts are now detected too.

	* core/DB/PostgresError.class.php, core/DB/PgSQL.class.php: queryRaw()
	now throws DuplicateObjectException upon PG's UNIQUE_VIOLATION.

	* core/OSQL/SQLQueryJoin.class.php: dropped.

	* core/OSQL/SelectQuery.class.php: joinQuery() is now deprecated in
	favour of join; leftJoinQuery is dropped.

2006-10-18	Dmitry E. Demidov

	* core/OSQL/SelectQuery.class.php: added method leftJoinQuery.

	* core/OSQL/SQLQueryJoin.class.php: added property left for ability 
	generate left outer join with query.

2006-10-18	Konstantin V. Arkhipov

	* meta/: column support for identifiers.

	* core/Form/Primitives/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-07	Konstantin V. Arkhipov

	* meta/: dropped support of <property identifier="true" ... />; use
	<identifier ... /> now.

2006-10-06	Anton E. Lebedevich
