@@ -58,7 +58,10 @@
 		// core classes
 		.ONPHP_CORE_PATH.'Base'			.PATH_SEPARATOR
 		.ONPHP_CORE_PATH.'Cache'		.PATH_SEPARATOR
+		
 		.ONPHP_CORE_PATH.'DB'			.PATH_SEPARATOR
+		.ONPHP_CORE_PATH.'DB'.DIRECTORY_SEPARATOR.'Transaction'.PATH_SEPARATOR
+		
 		.ONPHP_CORE_PATH.'Exceptions'	.PATH_SEPARATOR
 		
 		.ONPHP_CORE_PATH.'Form'			.PATH_SEPARATOR
